:fire: finished client

--- a/src/assets/style.sass
+++ b/src/assets/style.sass
@@ -45,8 +45,8 @@ body
     animation: fadingColor 15s ease 0s infinite 
     transition: all ease 0.3s
     @include smartphone
-      width: 50px
-      height: 50px
+      // width: 50px
+      // height: 50px
   &:hover
     opacity: 1
 
@@ -63,25 +63,27 @@ body
     background-color: white
   
 .header
-  height: 20vh
+  height: 10vh
   background-color: $header-color
   color: $light-text-color
   padding: 5px
   font-size: 1.3em
   display: flex
-  animation: fadingBackground 15s ease 0s infinite
+  animation: fadingBackground 5s ease 0s infinite
   box-shadow: 0px 0px 5px 2px #22223b78
   @include smartphone
     // font-size: 1em
     padding: 20px
     height: 15vh
+  h1
+    margin: auto
 
 .cards, .card
   transition: all .5s
 
 .cards
   position: relative
-  height: 77.25vh
+  height: 87.25vh
   display: flex
   flex-direction: row
   display: flex
@@ -141,11 +143,17 @@ body
     &>*
       display: flex
     .body-title
-      font-size: 1.5rem
+      font-size: 1.25rem
       margin-bottom: 1rem
       color: $dark-text-color
       @include smartphone
-          // font-size: 0.70rem
+          font-size: 1rem
+    .body-synopsis
+      text-align: justify
+      text-justify: inter-word
+      margin-bottom: 1rem
+      @include smartphone
+        font-size: 0.80rem
     .body-inline
       display: -webkit-box
       // margin-top: 0.75rem
@@ -263,17 +271,11 @@ body
 
 @keyframes fadingBackground
   0%
-    background-color: $header-color
-  20%
-    background-color: #4A4E69
-  40% 
-    background-color: #9A8C98
-  60%
-    background-color: #C9ADA7
-  80%
-    background-color: #9A8C98
+    background-color: #606c88
+  50%
+    background-color: #3f4c66
   100%
-    background-color: $header-color
+    background-color: #606c88
 
 @keyframes fadingColor
   0%
@@ -313,6 +315,22 @@ body
   100% 
     transform: translateX(0)
 
+@keyframes bounceIn
+  0% 
+    opacity: 0
+    transform: scale(0.3) translaete3d(0,0,0)
+  20% 
+    transform: scale(1.1)
+  40%
+    transform: scale(0.90)
+  60%
+    opacity: 1
+    transform: scale(1.03) 
+  80% 
+    transform: scale(0.97)
+  100% 
+    transform: scale(1) translate3d(0,0,0)
+
 @keyframes octocat-wave
   0%,
     100%
@@ -326,6 +344,8 @@ body
     80%
     transform: rotate(10deg)
 
+.bounce-in
+  animation-name: bounceIn
 .bounce-left 
   animation-name: bounceInLeft
 .bounce-right
