--- a/src/assets/style.sass
+++ b/src/assets/style.sass
@@ -85,7 +85,8 @@ body
   position: relative
   height: 87.25vh
   display: flex
-  flex-direction: row
+  // flex-direction: row
+  flex-direction: column
   display: flex
   justify-content: center
   @include smartphone
@@ -97,20 +98,21 @@ body
   align-self: center
   margin: auto 0
   position: relative
-  width: 400px
-  margin: 8vw
+  width: 350px
+  margin: 2vh
   display: flex
   flex-direction: column
   box-shadow: 0 2px 6px 2px rgba(0,0,0,.12)   
   border-radius: 5px
   @include smartphone
     width: 300px
+    margin: 8vw
   &-image
-    height: 50vh
+    height: 40vh
     object-fit: cover
     border-radius: 5px
     @include smartphone
-      // height: 29vh
+      height: 40vh
   &-divider
     position: relative;
     &:before
@@ -177,6 +179,8 @@ body
       float: left
     &-right
       float: right
+    &-review
+      border-top: 2px dashed #E5E9F0    
 
   .vote
     width: 100%
@@ -215,6 +219,30 @@ body
     margin: 5px 20px
   @include large-smartphone
     margin: 15px 20px
+
+.card-review
+  min-height: 10vh
+  justify-content: space-between
+  font-size: 0.90rem
+  &-avatar
+    position: absolute
+    height: 7vh
+    left: -2.75vh
+    top: -3vh
+  &-text
+    margin: auto 0
+    font-size: 1.25rem
+  &-footer
+    display: flex
+    padding: 0 5% 2% 5%
+    font-size: 0.75rem
+    color: grey
+  &-title
+    padding: 2% 5% 0 5%
+    display: flex
+    margin-left: 3vh
+    font-size: 1rem
+    color: #434C5E
 
 .card-selected
   transform: scale(1.2) !important
