:sparkles: scrollreveal js

--- a/src/assets/style.sass
+++ b/src/assets/style.sass
@@ -28,7 +28,7 @@ $loose-color: #d88383
   // height: 100%
 
 body
-  overflow: hidden
+  overflow: hidden auto
   height: 100vh
   display: flex
   background-color: $background-color
